--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -20,6 +20,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script type='text/javascript'>
+        window.API_HOST = "{{API_HOST}}";
+    </script>
   </head>
   <body>
     <noscript>
