ENH: change dashboard title

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Snailwatch</title>
     <script type='text/javascript'>
         window.API_HOST = "{{API_HOST}}";
     </script>
