--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -22,6 +22,7 @@
     <title>Snailwatch</title>
     <script type='text/javascript'>
         window.API_HOST = "{{API_HOST}}";
+        window.URL_PREFIX = "{{URL_PREFIX}}";
     </script>
   </head>
   <body>
