--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>Snailwatch</title>
     <script type='text/javascript'>
-        window.API_HOST = "{{API_HOST}}";
+        window.API_SERVER = "{{API_SERVER}}";
         window.URL_PREFIX = "{{URL_PREFIX}}";
     </script>
   </head>
